src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/PromoCampaignInfo.module.css
.wrapper {
    width: 100%;
    height: 100%;
}

.header {
    position: sticky;
    top: 63px;
    z-index: 1;
    background-color: #ffffff;
    padding: 15px;
    border-bottom: 1px solid #e5e8eb;
}

.promoContainer {
    display: flex;
}

.title {
    font-weight: bold;
    font-size: 20px;
    line-height: 28px;
    letter-spacing: -.38px;
    margin-bottom: 15px;
}

.formGroup {
    display: flex;
    padding-left: 0 !important;
    padding-right: 0 !important;
    padding-bottom: 15px;
    padding-top: 15px;
    border: 1px solid #d9d9d9;
    border-radius: 5px;
}

.formGroupLabel {
    position: absolute;
    top: -11px;
    left: 5px;
    padding: 0 5px;
    background-color: #f8f8f8;
}

.infoTitle {
    margin-bottom: 7px;
    font-size: 16px;
    font-weight: bold;
    line-height: 26px;
    letter-spacing: -0.3px;
}

.infoText {
    font-size: 14px;
    color: #4e4e4e;
}

.infoDetail {
    margin-top: 15px;
}

.containerStep {
    padding: 15px;
}

.flex {
    display: flex;
    flex-direction: column;
    width: 80%;
}

.flexRow {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 80%;
    max-width: 250px;
}

.checkbox:not(:last-child) {
    margin-bottom: 10px;
}

.switchContainer {
    max-width: 280px;
    display: flex;
    align-items: flex-start;
}

.switch {
    display: flex;
    align-items: center;
}

.switch > button {
    align-self: center;
}

.status {
    display: inline-block;
    padding: 5px 16px;
    background-color: rgba(9, 165, 82, 0.08);
    color: #09a552;
    border-radius: 25px;
    text-align: center;
}

.danger {
    background-color: #fff1f0;
    color: #dc283a;
}

.webLink {
    white-space: nowrap;
    text-overflow: ellipsis;
    max-width: 500px;
    overflow: hidden;
}

.buttonGroup {
    margin-top: 15px;
}

.buttonGroup button:not(:last-child) {
    margin-right: 15px;
}

